datePicker almost implemented
Date picker is almost implemented, it doesn´t come back to the previous screen after picking a date

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="month_and_year">Diciembre 1998</string>
     <string name="hour_of_day">12:00 PM</string>
     <string name="lot">Lot</string>
+    <string name="addReservation">Add Reservation</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment</string>
 </resources>
