--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,11 @@
     <string name="addReservation">Add Reservation</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment</string>
+    <string name="order_confirmation">Hello_World_Dialog</string>
+    <string name="ok">All is finee</string>
+    <string name="save">Save</string>
+    <string name="lotEditText">Which lot do you want?</string>
+    <string name="startDateTimeEditText">Start date/time</string>
+    <string name="endDateTimeEditText">End date/time</string>
+    <string name="authorizationEditText">Authorization code</string>
 </resources>
