--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">My_First_App</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Parking App</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -26,7 +25,7 @@
 
     <!-- Delete dialog -->
     <string name="deleteDialogTitle">Delete Reservation</string>
-    <string name="deleteDialogText">Are you sure you want to delete this reservation? Please input the autorization code to confirm.</string>
+    <string name="deleteDialogText">Are you sure you want to delete this reservation? Please input the authorization code to confirm.</string>
     <string name="deleteDialogHint">Authorization Code</string>
     <string name="deleteDialogCancel">Cancel</string>
     <string name="deleteDialogDeleteButton">Delete</string>
@@ -35,6 +34,7 @@
 
     <!-- lots spinner screen 3-->
     <string-array name="lotsNumbers">
+        <item>Pick a Lot</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
