--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,15 @@
 <resources>
     <string name="app_name">Parking App</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
     <string name="title_ParkingApp">ParkingApp</string>
-    <string name="busyPlaces">busy</string>
+    <string name="busyPlaces">Busy</string>
     <string name="freePlaces">Free</string>
     <string name="day">Martes 20</string>
     <string name="month_and_year">Diciembre 1998</string>
     <string name="hour_of_day">12:00 PM</string>
     <string name="lot">Lot</string>
     <string name="addReservation">Add Reservation</string>
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment</string>
-    <string name="order_confirmation">Hello_World_Dialog</string>
-    <string name="ok">All is finee</string>
     <string name="save">Save</string>
-    <string name="lotEditText">Which lot do you want?</string>
     <string name="startDateTimeEditText">Start date/time</string>
     <string name="endDateTimeEditText">End date/time</string>
     <string name="authorizationEditText">Authorization code</string>
